# octetos-version

./: .gitignore  AUTHORS  ChangeLog  INSTALL  Makefile.am  TODO  configure.ac
examples/: version-check.sh
ing/: rqs.ods
src/: Apt.cc  Apt.hh  Makefile.am  Pacman.cc  Pacman.hh  Portage.cc  Portage.hh  libversion.cc  main.cc  octetos-version.pc.in  version.cc  version.hh
tests/: Makefile.am  v0.cc
